# libiptcdata

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  configure.in  libiptcdata.spec.in
docs/reference/: .gitignore  Makefile.am  about.sgml  commandline.sgml  i18n.sgml  i18n.xml  libiptcdata-docs.sgml  libiptcdata-docs.xml  libiptcdata-sections.txt  libjpeg.sgml  libjpeg.xml  overview.sgml  overview.xml
docs/reference/tmpl/: _stdint.sgml  i18n.sgml  iptc-data.sgml  iptc-dataset.sgml  iptc-jpeg.sgml  iptc-loader.sgml  iptc-log.sgml  iptc-mem.sgml  iptc-tag.sgml  iptc-utils.sgml  libiptcdata-unused.sgml
iptc/: .gitignore  Makefile.am  i18n.h  main.c
iptc/po/: .cvsignore  Makevars  POTFILES.in  de.po  it.po
libiptcdata/: .gitignore  Makefile.am  i18n.h  iptc-data.c  iptc-data.h  iptc-dataset.c  iptc-dataset.h  iptc-jpeg.c  iptc-jpeg.h  iptc-log.c  iptc-log.h  iptc-mem.c  iptc-mem.h  iptc-tag.c  iptc-tag.h  iptc-utils.c  iptc-utils.h  libiptcdata.pc.in
m4/: Makefile.am  python-devel.m4
po/: .cvsignore  .gitignore  LINGUAS  POTFILES.in  de.po  it.po  ka.po
python/: .gitignore  MANIFEST.in  Makefile.am  README  pyiptcdata.c  pyiptcdata.h  pyiptcdatamod.c  pyiptcdataset.c  setup.py
python/examples/: set_iptc.py  show_iptc.py
python/python2/: pyiptcdataset.c
python/python3/: pyiptcdata.c  pyiptcdata.h  pyiptcdatamod.c  pyiptcdataset.c
win/: Makefile.am  libiptcdata.vcproj  stdint.h
win/iptctool/: Makefile.am
