SUBDIRS = m4 libiptcdata po iptc docs

EXTRA_DIST = mkinstalldirs  mkinstalldirs  mkinstalldirs  mkinstalldirs  mkinstalldirs  mkinstalldirs  mkinstalldirs  mkinstalldirs  mkinstalldirs  mkinstalldirs  mkinstalldirs  mkinstalldirs  mkinstalldirs  config.rpath mkinstalldirs  @PACKAGE@.spec

ACLOCAL_AMFLAGS = -I m4
