AC_PREREQ(2.50)
AC_INIT(libiptcdata/iptc-data.h)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libiptcdata, 0.1.2)
AM_MAINTAINER_MODE

dnl ---------------------------------------------------------------------------
dnl When making a release:
dnl  1. If the library source code has changed at all since the last release,
dnl     then increment REVISION.
dnl  2. If the interface has been changed since the last release, increment
dnl     CURRENT, and set REVISION to 0.
dnl  3. If the interface changes consist solely of additions, increment AGE.
dnl  4. If the interface has removed elements, set AGE to 0.
dnl ---------------------------------------------------------------------------
LIBIPTCDATA_AGE=1
LIBIPTCDATA_REVISION=1
LIBIPTCDATA_CURRENT=1
AC_SUBST(LIBIPTCDATA_AGE)
AC_SUBST(LIBIPTCDATA_REVISION)
AC_SUBST(LIBIPTCDATA_CURRENT)
LIBIPTCDATA_VERSION_INFO=$LIBIPTCDATA_CURRENT:$LIBIPTCDATA_REVISION:$LIBIPTCDATA_AGE
AC_SUBST(LIBIPTCDATA_VERSION_INFO)

AM_PROG_LIBTOOL

dnl Create a stdint.h-like file containing size-specific integer definitions
dnl that will always be available
AC_NEED_STDINT_H(libiptcdata/_stdint.h)

dnl ---------------------------------------------------------------------------
dnl i18n support
dnl ---------------------------------------------------------------------------
ALL_LINGUAS=""

dnl The gettext domain of the command-line utility
IPTC_GETTEXT_PACKAGE=iptc
AC_DEFINE_UNQUOTED(IPTC_GETTEXT_PACKAGE,"$IPTC_GETTEXT_PACKAGE",[The gettext domain for the command-line utility])
AC_SUBST(IPTC_GETTEXT_PACKAGE)

dnl The gettext domain of the library
GETTEXT_PACKAGE=${PACKAGE}
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[The gettext domain for the library])
AC_SUBST(GETTEXT_PACKAGE)
#if test -f po/Makevars.template
#then
#	sed -e "s/^DOMAIN.*/DOMAIN = ${GETTEXT_PACKAGE}/" < po/Makevars.template > po/Makevars
#	AC_MSG_RESULT([yes. done.])
#else
#	AC_MSG_RESULT([no])
#fi
AM_GNU_GETTEXT([external])
AM_GNU_GETTEXT_VERSION(0.13.1)

dnl Check for headers (Mac OSX often doesn't have them)
AC_CHECK_HEADERS([getopt.h wchar.h iconv.h])


GTK_DOC_CHECK([1.0])


dnl ---------------------------------------------------------------------------
dnl Warnings
dnl ---------------------------------------------------------------------------
if test "x$GCC" = "xyes"; then
    CFLAGS="$CFLAGS -g -Wall -Wmissing-declarations -Wmissing-prototypes"
    LDFLAGS="$LDFLAGS -g -Wall"
    AC_SUBST(CFLAGS)
    AC_SUBST(LDFLAGS)
fi

AC_OUTPUT([
  Makefile
  libiptcdata.spec
  libiptcdata/Makefile
  m4/Makefile
  libiptcdata/libiptcdata.pc
  iptc/Makefile
  docs/Makefile
  docs/reference/Makefile
  docs/reference/version.xml
  po/Makefile.in
  iptc/po/Makefile.in
  win/Makefile
  win/iptctool/Makefile
])

echo "

Configuration (libiptcdata):

	Source code location:  ${srcdir}
	Compiler:              ${CC}
"
